<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:stretchColumns="1">

    <TableRow
        android:layout_weight="1"
        android:padding="5dp">
        <TextView
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/titulo"
            android:layout_span="2"
            />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:padding="5dp">
        <TextView
            android:id="@+id/txtNombre"
            android:text="@string/campo_nombre"
            />
        <TextView
            android:id="@+id/txtApellidos"
            android:text="@string/campo_apellidos"
            />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:padding="5dp">
        <EditText
            android:id="@+id/fldNombre"
            />

        <EditText
            android:id="@+id/fldApellidos"
            />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:padding="5dp">
        <TextView
            android:id="@+id/txtContrasenha"
            android:text="@string/campo_contrasenha"
            />
        <TextView
            android:id="@+id/txtRepetirContrasenha"
            android:text="@string/campo_repetirContrasenha"
            />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:padding="5dp">
        <EditText
            android:id="@+id/fldContrasenha"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/fldRepetirContrasenha"
            android:inputType="textPassword"
            />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:padding="5dp">
        <TextView
            android:id="@+id/txtTelefono"
            android:text="@string/campo_telefono"
            />

        <TextView
            android:id="@+id/fechaNaciemiento"
            android:text="@string/campo_fechaNacimiento"
            />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:padding="5dp">
        <EditText
            android:id="@+id/fldTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/fldFechaNacimiento"
            android:inputType="date"
            android:hint="DD/MM/YY"
            />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:padding="5dp">
        <TextView
            android:id="@+id/txtPais"
            android:text="@string/campo_Pais"
            />

        <TextView
            android:id="@+id/txtCorreoElectronico"
            android:text="@string/campo_email"
            />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:padding="5dp">
        <Spinner
            android:id="@+id/cmbPais"
            />

       <EditText
           android:id="@+id/fldEmail"
           />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:padding="5dp">
        <TextView
            android:id="@+id/txtSexo"
            android:text="@string/campo_sexo"
            />

        <RadioGroup android:id="@+id/grbGrupo1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton android:id="@+id/rbHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo_hombre" />

            <RadioButton
                android:id="@+id/rbMujer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo_mujer" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:padding="5dp">
        <CheckBox android:id="@+id/chkBoletin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boletin_noticias"
            android:checked="true" />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:padding="5dp">
        <TextView
            android:id="@+id/mensajeError"
            android:layout_span="2"
            android:textColor="@color/design_default_color_error"
            android:textStyle="bold"
            android:textSize="30dp"
            />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:padding="5dp">
        <Button
            android:id="@+id/btnRegistro"
            android:text="@string/boton_registro"
            />

        <Button
            android:id="@+id/btnSalir"
            android:text="@string/boton_salir"
            />
    </TableRow>
</TableLayout>